# push_swap

./: CMakeLists.txt  Makefile  for_debug.c  ft_analise_op.c  ft_check_arg.c  ft_create_stack.c  ft_create_stack_2.c  ft_error.c  ft_find_mid.c  ft_main_body.c  ft_sort_stack.c  libft.h  main.c  op_few_cmd.c  op_rotate.c  operations.c  push_swap  push_swap.h  utility.c  utility_cmd.c
checker/: Makefile  gnl.c  main.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+6 more)
src_checker/: Makefile  checker  ft_do_cmd.c  ft_do_cmd_a.c  ft_do_cmd_b.c  ft_return.c  gnl.c  main.c
